--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
+# Ignore Streamlit secrets
 .streamlit/
+
+# Ignore local data file
+data.csv
+
+# Ignore Python cache files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Ignore macOS system files
+.DS_Store
+
+# Ignore VSCode settings (falls du es nutzt)
+.vscode/
